--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-fastapi>=0.105.0
-uvicorn>=0.24.0
-gunicorn>=21.2.0
-pydantic>=2.5.2
 python-dotenv>=1.0.0
 google-genai>=0.5.0
-mcp[cli]
+mcp[cli]>=1.0.0
 async-timeout>=4.0.3
 python-json-logger>=2.0.7
 httpx>=0.25.2
 requests>=2.31.0
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
